force-app/main/default/objects/FNS_ProcessCenter__c/FNS_ProcessCenter__c.object-meta.xml
<CustomObject>
    <label>Process Center</label>
    <nameField>
        <label>Process Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>