force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_AddressLine__c.field-meta.xml
<CustomField>
    <fullName>FNS_AddressLine__c</fullName>
    <description>Address Line 2</description>
    <label>Address Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>