force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_City__c.field-meta.xml
<CustomField>
    <fullName>FNS_City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>