force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_County__c.field-meta.xml
<CustomField>
    <fullName>FNS_County__c</fullName>
    <description>County</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>