force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_ProcessCenterExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessCenterExtId__c</fullName>
    <description>processCenterId</description>
    <externalId>true</externalId>
    <label>Process Center Ext Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>