force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_ProcessCenterNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessCenterNumber__c</fullName>
    <description>Number</description>
    <label>Process Center Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>