force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_State__c.field-meta.xml
<CustomField>
    <fullName>FNS_State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>