force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_StreetName__c.field-meta.xml
<CustomField>
    <fullName>FNS_StreetName__c</fullName>
    <description>Street Name</description>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>