force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_StreetNumber__c</fullName>
    <description>Street Number</description>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>