force-app/main/default/objects/FNS_ProcessCenter__c/fields/FNS_Zip__c.field-meta.xml
<CustomField>
    <fullName>FNS_Zip__c</fullName>
    <description>Zip Code</description>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>