force-app/main/default/objects/FNS_ProcessCenter__c/recordTypes/FNS_ProcessCenter.recordType-meta.xml
<RecordType>
    <fullName>FNS_ProcessCenter</fullName>
    <active>true</active>
    <label>Process Center</label>
</RecordType>