force-app/main/default/objects/FNS_ProcessCenter__c/listViews/FNS_ProcessCenters.listView-meta.xml
<ListView>
    <fullName>FNS_ProcessCenters</fullName>
    <columns>NAME</columns>
    <columns>FNS_City__c</columns>
    <columns>FNS_County__c</columns>
    <columns>FNS_Zip__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Process Centers</label>
</ListView>